traefik-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort
  ports:
    - name: web
      port: 80
      targetPort: web
      nodePort: 30080
    - name: admin
      port: 8080
      targetPort: admin
      nodePort: 30081
  selector:
    app: traefik
