traefik-manifests/ingressroute-happyminds-nl.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: happyminds-nl
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`happyminds.nl`) || Host(`www.happyminds.nl`)
      kind: Rule
      services:
        - name: happyminds-external
          kind: TraefikService
  tls:
    certResolver: letsencrypt
